--- a/package.json
+++ b/package.json
@@ -19,6 +19,10 @@
   "eslintConfig": {
     "extends": "react-app"
   },
+  "engines": {
+    "node": ">= 11.6.0",
+    "npm": ">= 6.9.0"
+  },
   "browserslist": {
     "production": [
       ">0.2%",
