--- a/package.json
+++ b/package.json
@@ -6,9 +6,11 @@
     "@material-ui/core": "^4.4.2",
     "axios": "^0.19.0",
     "chai": "^4.2.0",
+    "history": "^4.10.1",
     "http-proxy-middleware": "^0.20.0",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
+    "react-router": "^5.0.1",
     "react-scripts": "3.1.1",
     "sinon": "^7.4.2"
   },
